Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34503

archive storage engine fails to compile with gcc-14.1.1

    XMLWordPrintable

Details

    Description

      $ b --target archive
      [1/3] Building C object storage/archive/CMakeFiles/archive.dir/azio.c.o
      FAILED: storage/archive/CMakeFiles/archive.dir/azio.c.o 
      /usr/bin/gcc -DHAVE_CONFIG_H -DMYSQL_DYNAMIC_PLUGIN -D_FILE_OFFSET_BITS=64 -Darchive_EXPORTS -I/home/dan/repos/mariadb-server-rebase/wsrep-lib/include -I/home/dan/repos/mariadb-server-rebase/wsrep-lib/wsrep-API/v26 -I/home/dan/repos/build-mariadb-server-rebase-debug/include -I/home/dan/repos/mariadb-server-rebase/include -I/home/dan/repos/mariadb-server-rebase/sql -pie -fPIC -fstack-protector --param=ssp-buffer-size=4 -fPIC -g -DPROTECT_STATEMENT_MEMROOT -DDBUG_TRACE -DENABLED_DEBUG_SYNC -ggdb3 -DSAFE_MUTEX -Wall -Wdeclaration-after-statement -Wenum-compare -Wenum-conversion -Wextra -Wno-format-truncation -Wno-init-self -Wno-nonnull-compare -Wno-unused-parameter -Wvla -Wwrite-strings -Werror -std=gnu99 -fPIC -MD -MT storage/archive/CMakeFiles/archive.dir/azio.c.o -MF storage/archive/CMakeFiles/archive.dir/azio.c.o.d -o storage/archive/CMakeFiles/archive.dir/azio.c.o -c /home/dan/repos/mariadb-server-rebase/storage/archive/azio.c
      In file included from /home/dan/repos/mariadb-server-rebase/storage/archive/azio.c:14:
      /home/dan/repos/mariadb-server-rebase/storage/archive/azlib.h:197:9: error: "Z_NULL" redefined [-Werror]
        197 | #define Z_NULL  0  /* for initializing zalloc, zfree, opaque */
            |         ^~~~~~
      In file included from /home/dan/repos/mariadb-server-rebase/storage/archive/azlib.h:38:
      /usr/include/zlib.h:223:9: note: this is the location of the previous definition
        223 | #define Z_NULL  NULL  /* for compatibility with zlib, was for initializing zalloc, zfree, opaque */
            |         ^~~~~~
      cc1: all warnings being treated as errors
      [2/3] Building CXX object storage/archive/CMakeFiles/archive.dir/ha_archive.cc.o
      FAILED: storage/archive/CMakeFiles/archive.dir/ha_archive.cc.o 
      /usr/bin/g++ -DHAVE_CONFIG_H -DMYSQL_DYNAMIC_PLUGIN -D_FILE_OFFSET_BITS=64 -Darchive_EXPORTS -I/home/dan/repos/mariadb-server-rebase/wsrep-lib/include -I/home/dan/repos/mariadb-server-rebase/wsrep-lib/wsrep-API/v26 -I/home/dan/repos/build-mariadb-server-rebase-debug/include -I/home/dan/repos/mariadb-server-rebase/include -I/home/dan/repos/mariadb-server-rebase/sql -pie -fPIC -fstack-protector --param=ssp-buffer-size=4 -fPIC -g -DPROTECT_STATEMENT_MEMROOT -DDBUG_TRACE -DENABLED_DEBUG_SYNC -D_GLIBCXX_DEBUG -D_GLIBCXX_ASSERTIONS -ggdb3 -DSAFE_MUTEX -Wall -Wenum-compare -Wenum-conversion -Wextra -Wno-format-truncation -Wno-init-self -Wno-nonnull-compare -Wno-unused-parameter -Wnon-virtual-dtor -Woverloaded-virtual -Wsuggest-override -Wvla -Wwrite-strings -Werror -fno-operator-names -std=gnu++11 -fPIC -MD -MT storage/archive/CMakeFiles/archive.dir/ha_archive.cc.o -MF storage/archive/CMakeFiles/archive.dir/ha_archive.cc.o.d -o storage/archive/CMakeFiles/archive.dir/ha_archive.cc.o -c /home/dan/repos/mariadb-server-rebase/storage/archive/ha_archive.cc
      In file included from /home/dan/repos/mariadb-server-rebase/storage/archive/ha_archive.h:21,
                       from /home/dan/repos/mariadb-server-rebase/storage/archive/ha_archive.cc:29:
      /home/dan/repos/mariadb-server-rebase/storage/archive/azlib.h:197:9: error: "Z_NULL" redefined [-Werror]
        197 | #define Z_NULL  0  /* for initializing zalloc, zfree, opaque */
            |         ^~~~~~
      In file included from /home/dan/repos/mariadb-server-rebase/storage/archive/ha_archive.h:20:
      /usr/include/zlib.h:223:9: note: this is the location of the previous definition
        223 | #define Z_NULL  NULL  /* for compatibility with zlib, was for initializing zalloc, zfree, opaque */
            |         ^~~~~~
      cc1plus: all warnings being treated as errors
      
      

      \

      Attachments

        Activity

          People

            TheLinuxJedi Andrew Hutchings (Inactive)
            danblack Daniel Black
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.