MDEV-34503 Archive Storage Engine fails to compile with gcc-14

gcc has started to recognise the difference between NULL and 0.

As such the NULL_Z defination in the azlib.h is an inconsistent
uplicate.

As the function return an integer, make the return value 0 rather
than Z_NULL.