storage/archive/azio.c
@@ -99,7 +99,7 @@ int az_open (azio_stream *s, const char *path, int Flags, File fd)
     if (err != Z_OK)
     {
       destroy(s);
-      return Z_NULL;
+      return 0;
     }
   } else {
     s->stream.next_in  = s->inbuf;
@@ -114,7 +114,7 @@ int az_open (azio_stream *s, const char *path, int Flags, File fd)
     if (err != Z_OK)
     {
       destroy(s);
-      return Z_NULL;
+      return 0;
     }
   }
   s->stream.avail_out = AZ_BUFSIZE_WRITE;
@@ -134,7 +134,7 @@ int az_open (azio_stream *s, const char *path, int Flags, File fd)
   if (s->file < 0 ) 
   {
     destroy(s);
-    return Z_NULL;
+    return 0;
   }
 
   if (Flags & O_CREAT || Flags & O_TRUNC) 
